--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section class="intro">
           <div class="intro__container">
             <div class="intro__info">
-              <h1 class="intro__title title">Привёт!</h1>
+              <h1 class="intro__title title">Привет!</h1>
               <p class="intro__subtitle">Я Frontend Разработчик (Vue)!</p>
               <div class="intro__icons">
                 <div class="intro__icon"><img src="./image/intro/icons/vue.svg" alt="Vue 3" title="Vue 3"></div>
@@ -62,7 +62,8 @@
         <div class="about__container">
           <h1 class="about__title title">Обо мне</h1>
           <p>Front-End программированием начал заниматься год назад.
-            Первым делом я в полной мере освоил HTML 5, CSS 3.0 и SCSS. Закрепив свои знания качественной версткой нескольких макетов, незамедлительно перешел к изучению ECMAScript 6. И уже сейчас могу писать проекты используя изученные технологии. Но мое обучение на этом не остановилось, все свободное время я посвящаю освоению новых методов и технологий, которые могли оптимизировать работу веб-страницы и увеличить ее функционал, а также повысить качество моего кода. Моя специальность требует от меня постоянной адаптации к новым технологиям, и я охотно стремлюсь удовлетворить ее требования.</p>
+            Первым делом я в полной мере освоил HTML 5, CSS 3.0 и SCSS. Закрепив свои знания качественной версткой нескольких макетов, незамедлительно перешел к изучению ECMAScript 6. И уже сейчас могу писать проекты используя изученные технологии. Но мое обучение на этом не остановилось, все свободное время я посвящаю освоению новых методов и технологий, которые могли оптимизировать работу веб-страницы и увеличить ее функционал, а также повысить качество моего кода. Моя специальность требует от меня постоянной адаптации к новым технологиям, и я охотно стремлюсь удовлетворить ее требования.
+          Ищу работу с возможностью совмещения с учёбой.</p>
         </div>
       </section>
       
